--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
     padding: 200px;
     top: 100px;
     left: 300px;
-    z-index; 2;
+    z-index: 2;
     margin: auto;
     position: absolute;
   }
