--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@
   .box {
     background-color: white;
     width: 60vw;
-    height 37vh;
+    height: 37vh;
     padding: 200px;
     top: 100px;
     left: 300px;
