--- a/style.css
+++ b/style.css
@@ -131,20 +131,18 @@ nav {
   width: 100%;
 }
 
-.nav-links a{
+.nav-links a {
   text-decoration: none;
   letter-spacing: 3px;
   color: black;
   font-weight: bold;
   font-size: 30px;
 }
-.nav-links li{
+.nav-links li {
   list-style: none;
-
-
+}
 .intro {
   padding-bottom: 20px;
- 
 }
 
 html {
@@ -152,5 +150,5 @@ html {
 }
 
 p .ci {
-  font-size: .5em;
+  font-size: 0.5em;
 }
