--- a/Week 4/light.css
+++ b/Week 4/light.css
@@ -99,3 +99,67 @@ body {
 .l1 {
   opacity: 0.3;
 }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: left;
+  min-height: 8vh;
+  background-color: none;
+  font-family: ivymode, sans-serif;
+  position: absolute;
+  font-weight: 400;
+  z-index: 3;
+  
+.nav-links {
+  display: flex;
+  background-color: none;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.nav-links a{
+  text-decoration: none;
+  letter-spacing: 3px;
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+    transition: scale .5s;
+
+}
+.nav-links li{
+  list-style: none;
+
+}
+.nav-links a:hover {
+  transform: scale(1.1,1.1);
+}
+
+
+.light1 { 
+    position: absolute;
+  right: 100px;
+  top: 220px;
+  width: 200px;
+  text-align: justify;
+  line-height: 70%;
+  font-size: 0.5rem;
+  }
+.light2 { 
+  position: absolute;
+  right: 500px;
+  top: 220px;
+  width: 200px;
+  text-align: justify;
+  line-height: 70%;
+  font-size: 0.5rem;
+  }
+.light3 { 
+  position: absolute;
+  right: 800px;
+  top: 220px;
+  width: 200px;
+  text-align: justify;
+  line-height: 70%;
+  font-size: 0.5rem;
+  }
