--- a/Week 4/style2.css
+++ b/Week 4/style2.css
@@ -13,7 +13,12 @@ body {
   background-color: black;
   font-family: "Roboto", sans-serif;
 }
-
+.gradient {
+  background-image: linear-gradient(white, black);
+  height: 100px;
+  width: 200px;
+  z-index: 10;
+}
 .introtext {
   font-family: "Times New Roman", serif;
   font-weight: 100;
@@ -98,4 +103,42 @@ body {
 
 .l1 {
   opacity: 0.3;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: none;
+  font-family: ivymode, sans-serif;
+  opacity: 0.5;
+  z-index: 3;
+}
+.nav-links {
+  display: flex;
+  background-color: none;
+  justify-content: center;
+  width: 80%;
+}
+
+.nav-links a {
+  text-decoration: none;
+  letter-spacing: 3px;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  transition: scale 0.5s;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links a:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.gradient {
+  background-image: linear-gradient(to right, red, #f06d06);
+  height: 100px;
+  width: 200px;
+  z-index: 10;
 }
