--- a/style.css
+++ b/style.css
@@ -1,159 +1,145 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.8rem;
-  background-color: hsl(100, 2%, 98%);
-}
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.8rem;
-}
-
-@keyframes fade {
-  0% {
-  }
-  100% {
-    border-top-color: transparent;
-  }
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(10deg);
-  }
-  100% {
-    transform: rotate(20deg);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(0.5);
-  }
-  100% {
-    transform: scale(1.5);
-  }
-}
-
 @keyframes spin {
-  0% {
+  from {
     transform: rotate(0deg);
   }
-  100% {
+  to {
     transform: rotate(360deg);
   }
 }
 
-.shape-container {
-  display: inline-block;
-  transition: all 2s;
-  transform-origin: center;
-  z-index: 1;
+@keyframes move {
+  from {
+    left: 0;
+  }
+  to {
+   left: 100%;
+  }
 }
-
-.shape-container-interaction {
-  transform: scale(0.25);
-}
-
-.shape-container-interaction-2 {
-  transform: scale(1);
-}
-
-.shape {
-  width: 0;
-  height: 0;
-  border-top: 60px solid hsl(140, 50%, 30%);
-  border-left: 60px solid;
-  border-radius: 50%;
-  margin: 0;
-  display: block;
-  transition: all 2s;
-  animation-duration: 2s;
-  animation-direction: alternate-reverse;
+.all {
+  animation: move;
+  animation-duration: 10s;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-out;
-  margin-left: 10px;
-  transform: rotate(0deg);
-  z-index: 1;
+  animation-timing-function: ease-in-out;
 }
 
-.box {
-  background-color: white;
-  width: 60vw;
-  height: 37vh;
-  padding: 200px;
-  top: 100px;
-  left: 300px;
-  z-index: 2;
-  margin: auto;
-  position: fixed;
-}
-
-p {
-  font-family: ivymode, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 3em;
-  top: 20px;
-  left: 80px;
+.a {
+  background-color: #1e3645;
   position: absolute;
-}
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
-  background-color: white;
-  font-family: ivymode, sans-serif;
-}
-.nav-links {
-  display: flex;
-  background-color: cyan;
-  justify-content: space-around;
-  width: 100%;
+  top: 10px;
+  left: 100px;
+  right: ;
+  bottom: ;
+  width: 100px;
+  height: 100px;
+  animation: spin;
+  
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
-.nav-links a {
-  text-decoration: none;
-  letter-spacing: 3px;
-  color: black;
-  font-weight: bold;
-  font-size: 30px;
-}
-.nav-links li {
-  list-style: none;
-}
-.intro {
-  padding-bottom: 20px;
-}
-
-html {
-  scroll-behavior: smooth;
+.b {
+  background-color: #cf4351;
+  position: absolute;
+  top: ;
+  left: ;
+  right: 100px;
+  bottom: ;
+  width: 100px;
+  height: 250px;
+    animation: spin;
+  
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
-p .ci {
-<<<<<<< HEAD
-  font-size: 0.5em;
-=======
-  font-size: .5em;
-  top: 50px;
->>>>>>> 1e529a0d99042e4026b1ff4d7695d8a7b88732d4
+.c {
+  background-color: #f37871;
+  position: absolute;
+  top: ;
+  left: ;
+  right: 10px;
+  bottom: ;
+  width: 200px;
+  height: 150px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.d {
+  background-color: #f6988b;
+  position: absolute;
+  top: ;
+  left: ;
+  right: ;
+  bottom: ;
+  width: 1200px;
+  height: 10px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.e {
+  background-color: #dfc0c6;
+  position: absolute;
+  top: 200px;
+  left: ;
+  right: ;
+  bottom: ;
+  width: 1200px;
+  height: 10px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.f {
+  background-color: #18afcd;
+  position: absolute;
+  top: ;
+  left: 20px;
+  right: ;
+  bottom: ;
+  width: 100px;
+  height: 300px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.g {
+  background-color: #1e3645;
+  position: absolute;
+  top: 10px;
+  left: 100px;
+  right: ;
+  bottom: ;
+  width: 100px;
+  height: 100px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.h {
+  background-color: #1e3645;
+  position: absolute;
+  top: 300px;
+  left: 100px;
+  right: ;
+  bottom: ;
+  width: 300px;
+  height: 200px;
+  animation: spin;
+  animation-duration: 30s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  
 }
