--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.parent {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -150,10 +158,6 @@ html {
 }
 
 p .ci {
-<<<<<<< HEAD
   font-size: 0.5em;
-=======
-  font-size: .5em;
   top: 50px;
->>>>>>> 1e529a0d99042e4026b1ff4d7695d8a7b88732d4
 }
