--- a/Archive/style2.css
+++ b/Archive/style2.css
@@ -15,11 +15,14 @@ text-align: center;
   width: 100%;
   float: left;
   border: 3px solid red;
+  
 }
 .rbox {
   width: 0%;
   float: right;
   border: 3px solid red;
+  margin-top: 8vh;
+
 }
 .boxes {
   width: 100%
@@ -32,6 +35,7 @@ text-align: center;
   width: 100%;
   float: left;
   font-size: 3em;
+  margin-top: 8vh;
 }
 
 #all > p { 
@@ -158,7 +162,7 @@ nav {
    height: 100%;
    right: 0;
    position: absolute;
-   top: 20vh;
+   top: 32vh;
    width: 40%;
    overflow-y: scroll;
    display: block;
@@ -169,7 +173,7 @@ nav {
   height: 44%;
   right: 40%;
   position: absolute;
-  top: 20vh;
+  top: 32vh;
   width: 39%;
   overflow-y: scroll;
   display: block;
