--- a/Archive/style2.css
+++ b/Archive/style2.css
@@ -36,6 +36,8 @@ text-align: center;
   float: left;
   font-size: 3em;
   margin-top: 8vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
 }
 
 #all > p { 
